# traceless

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  file.rs  file_store.rs  format_support.rs  lib.rs  metadata.rs  worker_pool.rs
crates/core/src/handlers/: archive.rs  audio.rs  css.rs  document.rs  epub.rs  gif.rs  harmless.rs  html.rs  image.rs  mod.rs  odf.rs  ooxml.rs  pdf.rs  sandbox.rs  svg.rs  tests.rs  torrent.rs  video.rs  xml_util.rs  xmp.rs  zip_util.rs
crates/core/tests/: archive_matrix.rs  concurrency_and_paths.rs  cross_cutting.rs  mat2_parity.rs  panic_freedom.rs  property_based.proptest-regressions  property_based.rs  weird_files.rs
crates/core/tests/common/: mod.rs
crates/gtk-frontend/: Cargo.toml
crates/gtk-frontend/src/: app.rs  badge.rs  bridge.rs  details_view.rs  dialogs.rs  empty_view.rs  file_row.rs  files_view.rs  main.rs  metadata_row.rs  settings_popover.rs  status_indicator.rs  style.rs  window.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/qt-frontend/: .qmlls.ini  Cargo.toml  build.rs
crates/qt-frontend/qml/: Badge.qml  CleaningWarningDialog.qml  DetailsPanel.qml  EmptyView.qml  FileDelegate.qml  FilesView.qml  MetadataSection.qml  SettingsPopup.qml  StatusBar.qml  main.qml
crates/qt-frontend/src/: app_controller.rs  bridge.rs  file_model.rs  main.rs  metadata_model.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: handler_aac.rs  handler_aiff.rs  handler_bmp.rs  handler_css.rs  handler_docx.rs  handler_epub.rs  handler_flac.rs  handler_gif.rs  handler_heic.rs  handler_heif.rs  handler_html.rs  handler_jpeg.rs  handler_jxl.rs  handler_m4a.rs  handler_mp3.rs  handler_odt.rs  handler_ogg.rs  handler_pdf.rs  handler_png.rs  handler_svg.rs  handler_tar.rs  handler_tarbz2.rs  handler_targz.rs  handler_tarxz.rs  handler_tarzst.rs  handler_tiff.rs  handler_torrent.rs  handler_wav.rs  handler_webp.rs  handler_zip.rs
fuzz/src/: lib.rs
resources/desktop/: io.github.traceless.desktop
