[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gtk-frontend",
    "crates/qt-frontend",
    "crates/launcher",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.92"
repository = "https://github.com/Pingasmaster/traceless"
readme = "README.md"
keywords = ["metadata", "exif", "privacy", "gtk", "qt"]
categories = ["command-line-utilities", "multimedia", "gui"]

[workspace.dependencies]
traceless-core = { path = "crates/core" }
log = "= 0.4.29"
env_logger = "= 0.11.10"
async-channel = "= 2.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
