[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gtk-frontend",
    "crates/qt-frontend",
    "crates/launcher",
]
# The `fuzz/` directory holds a separate cargo-fuzz crate that
# depends on libfuzzer-sys (nightly only). It must stay out of the
# stable workspace so that `cargo check --workspace` and the strict
# clippy gate don't try to compile it on stable. Run with
# `cargo +nightly fuzz run <target>` instead.
exclude = ["fuzz"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.92"
repository = "https://github.com/Pingasmaster/traceless"
readme = "README.md"
keywords = ["metadata", "exif", "privacy", "gtk", "qt"]
categories = ["command-line-utilities", "multimedia", "gui"]

[workspace.dependencies]
traceless-core = { path = "crates/core" }
log = "= 0.4.29"
env_logger = "= 0.11.10"
async-channel = "= 2.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Strict clippy profile, inherited by every workspace crate.
#
# The philosophy: enable the full pedantic lint set as a hard deny (so
# CI fails on regressions) but explicitly allow the lints that are
# subjective style preferences or produce false positives. Everything
# still enabled has been reviewed and is worth enforcing as a quality
# gate.
[workspace.lints.clippy]
# Each group is denied at priority -1 so the per-lint `allow` overrides
# below (priority 0) win against them. Encoding the gate in the manifest
# rather than relying on `cargo clippy -- -D ...` is required since rust
# 1.94: command-line `-D` flags override manifest allows, while
# manifest-side denies still respect the per-lint allow precedence rules.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# --- noisy / subjective ---
doc_markdown = "allow"             # flags acronyms and filenames in prose
missing_errors_doc = "allow"       # internal library; errors are obvious from types
missing_panics_doc = "allow"       # same
must_use_candidate = "allow"       # gets annoying on every getter
module_name_repetitions = "allow"  # `handlers::audio::AudioHandler` is fine
too_many_lines = "allow"           # arbitrary 100-line limit
items_after_statements = "allow"   # style preference
similar_names = "allow"            # `tag_type`/`tag_label` is fine

# --- false positives on already-lowercased strings ---
case_sensitive_file_extension_comparisons = "allow"

# --- byte counting is the whole point of several helpers ---
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

# --- stylistic preferences from newer clippy releases ---
# Both `if let / else` and `map_or_else` are clear; forcing one stylistic
# choice over the other does not improve readability across this codebase.
option_if_let_else = "allow"
# clippy 1.94 added a hard limit on first-doc-paragraph length; the extra
# context line some helpers carry is worth more than the brevity rule.
too_long_first_doc_paragraph = "allow"
# Several walkers split intentionally identical fast-paths between branches
# (e.g. CSS / GIF byte loops). Sharing the prefix would obscure the parser
# state machine, not clarify it.
branches_sharing_code = "allow"
