[package]
name = "traceless-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core metadata reading and cleaning library for Traceless"

[dependencies]
# Image metadata
little_exif = "0.6.23"
img-parts = "0.4.0"

# PDF metadata
lopdf = { version = "0.40.0", default-features = false }

# Audio metadata
lofty = "0.23.3"

# Document metadata (ODT, DOCX, etc.)
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
quick-xml = "0.39.2"

# General
log.workspace = true
thiserror = "2"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
