[package]
name = "traceless-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core metadata reading and cleaning library for Traceless"


[dependencies]
# Image metadata
little_exif = "= 0.6.23"
img-parts = "= 0.4.0"

# PDF metadata
lopdf = { version = "= 0.40.0", default-features = false }

# Audio metadata
lofty = "= 0.24.0"

# Document metadata (ODT, DOCX, etc.)
zip = { version = "= 8.5.1", default-features = false, features = ["deflate"] }
quick-xml = "= 0.37.5"

# General
log.workspace = true
thiserror = "= 2.0.18"
mime_guess = "= 2.0.5"
async-channel.workspace = true

[dev-dependencies]
tempfile = "= 3.27.0"
