[package]
name = "traceless-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core metadata reading and cleaning library for Traceless"


[dependencies]
# Image metadata
little_exif = "= 0.6.23"
img-parts = "= 0.4.0"

# PDF metadata
lopdf = { version = "= 0.40.0", default-features = false }

# Audio metadata
lofty = "= 0.24.0"

# Document metadata (ODT, DOCX, etc.)
zip = { version = "= 8.5.1", default-features = false, features = ["deflate"] }
quick-xml = "= 0.37.5"

# General
log.workspace = true
thiserror = "= 2.0.18"
mime_guess = "= 2.0.5"
async-channel.workspace = true
rand = "= 0.10.1"
tempfile = "= 3.27.0"

# Plain-TAR and gzip/bzip2/xz archive handlers. These are only used by
# the new `handlers::archive` module; office formats still use `zip`.
tar = "= 0.4.44"
flate2 = "= 1.1.9"
bzip2 = "= 0.6.1"
xz2 = "= 0.1.7"

[lints]
workspace = true

[dev-dependencies]
tempfile = "= 3.27.0"
# Integration tests build synthetic "dirty" fixtures on the fly using the
# same crates traceless-core already depends on. Repeating them here is
# harmless: cargo unifies versions.
lopdf = { version = "= 0.40.0", default-features = false }
little_exif = "= 0.6.23"
lofty = "= 0.24.0"
zip = { version = "= 8.5.1", default-features = false, features = ["deflate"] }
tar = "= 0.4.44"
flate2 = "= 1.1.9"
bzip2 = "= 0.6.1"
xz2 = "= 0.1.7"
proptest = "= 1.11.0"
