[package]
name = "traceless-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GTK4/libadwaita frontend for Traceless metadata cleaner"

[[bin]]
name = "traceless-gtk"
path = "src/main.rs"

[dependencies]
traceless-core.workspace = true
gtk = { version = "= 0.11.2", package = "gtk4", features = ["gnome_50"] }
adw = { version = "= 0.9.1", package = "libadwaita", features = ["v1_9"] }
log.workspace = true
env_logger.workspace = true
