[package]
name = "traceless"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Desktop environment auto-detecting launcher for Traceless metadata cleaner"


[lints]
workspace = true

[[bin]]
name = "traceless"
path = "src/main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
