[package]
name = "traceless"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Desktop environment auto-detecting launcher for Traceless metadata cleaner"


[lints]
workspace = true

[[bin]]
name = "traceless"
path = "src/main.rs"

[dependencies]
# No `log` / `env_logger`: the launcher is a tiny CLI shim with one
# user-visible warning, written directly to stderr via `eprintln!`.
# Removing the logger keeps the launcher binary smaller and skips an
# unused init call.
